--- a/src/main/docs/guide/appendix/breaks.adoc
+++ b/src/main/docs/guide/appendix/breaks.adoc
@@ -53,6 +53,14 @@ The instrumentation features for Reactor have been moved to the `micronaut-react
 
 dependency:micronaut-reactor[groupId="io.micronaut.reactor"]
 
+==== Validation Support Moved to Validation Module
+
+The validation features https://micronaut-projects.github.io/micronaut-validation/snapshot/guide/[have been moved to a separate module]. Moreover, the new validation module requires you to use `micronaut-validation-processor` in the annotation processor classpath.
+
+dependency:io.micronaut.vallidation:micronaut-validation-processor[scope='annotationProcessor']
+
+dependency:io.micronaut.vallidation:micronaut-validation[]
+
 ==== Session Support Moved to Session Module
 
 The Session handling features https://micronaut-projects.github.io/micronaut-session/snapshot/guide/[have been moved to its own module]. If you use the HTTP session module, change the maven coordinates from `io.micronaut:micronaut-session` to `io.micronaut.session:micronaut-session`.
