--- a/src/main/docs/guide/httpClient/httpClientImplementations/jdkHttpClient.adoc
+++ b/src/main/docs/guide/httpClient/httpClientImplementations/jdkHttpClient.adoc
@@ -10,5 +10,6 @@ The implementation based on https://openjdk.org/groups/net/httpclient/intro.html
 * Client Filters.
 * Streaming support.
 * Multipart requests.
+* H2C and HTTP/3.
 
 If you require any of these, we recommend you use the <<nettyHttpClient, implementation of the HTTP Client based on Netty>>.
