--- a/src/main/docs/guide/httpServer/serverConfiguration/cors/corsAllowedOrigins.adoc
+++ b/src/main/docs/guide/httpServer/serverConfiguration/cors/corsAllowedOrigins.adoc
@@ -1,6 +1,6 @@
-To allow any origin for a given configuration, don't include the `allowedOrigins` key in your configuration.
+To allow any origin for a given configuration, don't include the `allowed-origins` key in your configuration.
 
-For multiple valid origins, set the `allowedOrigins` key of the configuration to a list of strings. Each value can either be a static value (`http://www.foo.com`) or a regular expression (`^http(|s)://www\.google\.com$`). However, a regular expression is allowed only if the `allowedOriginaRegex` configuration value is `true`: it defaults to `false`.
+For multiple valid origins, set the `allowed-origins` key of the configuration to a list of strings. Each value can either be a static value (`http://www.foo.com`) or a regular expression (`^http(|s)://www\.google\.com$`). However, a regular expression is allowed only if the `allowed-origins-regex` configuration value is `true`: it defaults to `false`.
 
 Regular expressions are passed to link:{javase}java/util/regex/Pattern.html#compile-java.lang.String-[Pattern#compile] and compared to the request origin with link:{javase}java/util/regex/Matcher.html#matches--[Matcher#matches].
 
@@ -13,12 +13,12 @@ micronaut:
       enabled: true
       configurations:
         web:
-          allowedOriginsRegex: true
-          allowedOrigins:
+          allowed-origins-regex: true
+          allowed-origins:
             - http://foo.com
             - ^http(|s):\/\/www\.google\.com$
 ----
 
-WARNING: The `allowedOriginaRegex` configuration should be used judiciously. In this example, it will match http://foo.com and http://fooxcom. That's not an issue when there's no subdomain, but if there is, it allows an attacker to hijack the domain: When http://www.foo.com is configured for cors, an attacker may register wwwxfoo.com, and get full cors access. This means it's easy – with `allowedOriginaRegex` set to `true` – to accidentally make an insecure configuration, and is why the default is `false`.
+WARNING: The `allowed-origins-regex` configuration should be used judiciously. In this example, it will match http://foo.com and http://fooxcom. That's not an issue when there's no subdomain, but if there is, it allows an attacker to hijack the domain: When http://www.foo.com is configured for cors, an attacker may register wwwxfoo.com, and get full cors access. This means it's easy – with `allowed-origins-regex` set to `true` – to accidentally make an insecure configuration, and is why the default is `false`.
 
 
