--- a/src/main/docs/guide/httpServer/serverConfiguration/cors/corsAllowCredentials.adoc
+++ b/src/main/docs/guide/httpServer/serverConfiguration/cors/corsAllowCredentials.adoc
@@ -1,4 +1,4 @@
-Credentials are allowed by default for CORS requests. To disallow credentials, set the `allowCredentials` option to `false`.
+Credentials are allowed by default for CORS requests. To disallow credentials, set the `allow-credentials` option to `false`.
 
 .Example CORS Configuration
 [configuration]
@@ -9,5 +9,5 @@ micronaut:
       enabled: true
       configurations:
         web:
-          allowCredentials: false
+          allow-credentials: false
 ----
