--- a/src/main/docs/guide/httpServer/serverConfiguration/cors/corsAllowedMethods.adoc
+++ b/src/main/docs/guide/httpServer/serverConfiguration/cors/corsAllowedMethods.adoc
@@ -1,6 +1,6 @@
-To allow any request method for a given configuration, don't include the `allowedMethods` key in your configuration.
+To allow any request method for a given configuration, don't include the `allowed-methods` key in your configuration.
 
-For multiple allowed methods, set the `allowedMethods` key of the configuration to a list of strings.
+For multiple allowed methods, set the `allowed-methods` key of the configuration to a list of strings.
 
 .Example CORS Configuration
 [configuration]
@@ -11,7 +11,7 @@ micronaut:
       enabled: true
       configurations:
         web:
-          allowedMethods:
+          allowed-methods:
             - POST
             - PUT
 ----
