--- a/src/main/docs/guide/appendix/breaks.adoc
+++ b/src/main/docs/guide/appendix/breaks.adoc
@@ -2,7 +2,7 @@ This section documents breaking changes between Micronaut versions
 
 == 3.9.0
 
-Since Micronaut Framework 3.9.0, CORS `allowed-origins` configuration does not support regular expressions by default to prevent accidentally exposing your API. If you wish to support regular expression in your `allowed-origins,` you can enable it via the boolean `allowed-origins-regex`, which defaults to false.
+Since Micronaut Framework 3.9.0, CORS `allowed-origins` configuration does not support regular expressions to prevent accidentally exposing your API. You can use `allowed-origins-regex`, if you wish to support a regular expression.
 
 == 3.8.7
 
