--- a/src/main/docs/guide/httpServer/serverConfiguration/cors/annotationBasedCors.adoc
+++ b/src/main/docs/guide/httpServer/serverConfiguration/cors/annotationBasedCors.adoc
@@ -8,8 +8,8 @@ The `@CrossOrigin` annotation maps with a one-to-one correspondence to applicati
 [source,java]
 ----
 @CrossOrigin(
-	allowedOrigins = { "http://foo.com" ,"^http(|s):\\/\\/www\\.google\\.com$" },
-	allowedOriginsRegex = true,
+	allowedOrigins = { "http://foo.com" },
+	allowedOriginsRegex = "^http(|s):\\/\\/www\\.google\\.com$",
 	allowedMethods = { HttpMethod.POST, HttpMethod.PUT },
 	allowedHeaders = { HttpHeaders.CONTENT_TYPE, HttpHeaders.AUTHORIZATION },
 	exposedHeaders = { HttpHeaders.CONTENT_TYPE, HttpHeaders.AUTHORIZATION },
