--- a/src/main/docs/guide/httpServer/serverConfiguration/cors/corsAllowedOrigins.adoc
+++ b/src/main/docs/guide/httpServer/serverConfiguration/cors/corsAllowedOrigins.adoc
@@ -1,8 +1,8 @@
-To allow any origin for a given configuration, don't include the `allowed-origins` key in your configuration.
+Don't define `allowed-origins` or `allowed-origins-regex` to allow any origin for a given configuration.
 
-For multiple valid origins, set the `allowed-origins` key of the configuration to a list of strings. Each value can either be a static value (`http://www.foo.com`) or a regular expression (`^http(|s)://www\.google\.com$`). However, a regular expression is allowed only if the `allowed-origins-regex` configuration value is `true`: it defaults to `false`.
+For multiple valid origins, set the `allowed-origins` key of the configuration to a list of strings.
 
-Regular expressions are passed to link:{javase}java/util/regex/Pattern.html#compile-java.lang.String-[Pattern#compile] and compared to the request origin with link:{javase}java/util/regex/Matcher.html#matches--[Matcher#matches].
+You can also define via `allowed-origins-regex` a regular expression (`^http(|s)://www\.google\.com$`). The Regular expression is passed to link:{javase}java/util/regex/Pattern.html#compile-java.lang.String-[Pattern#compile] and compared to the request origin with link:{javase}java/util/regex/Matcher.html#matches--[Matcher#matches].
 
 .Example CORS Configuration
 [configuration]
@@ -13,12 +13,9 @@ micronaut:
       enabled: true
       configurations:
         web:
-          allowed-origins-regex: true
+          allowed-origins-regex: '^http(|s):\/\/www\.google\.com$'
           allowed-origins:
             - http://foo.com
-            - ^http(|s):\/\/www\.google\.com$
 ----
 
-WARNING: The `allowed-origins-regex` configuration should be used judiciously. In this example, it will match http://foo.com and http://fooxcom. That's not an issue when there's no subdomain, but if there is, it allows an attacker to hijack the domain: When http://www.foo.com is configured for cors, an attacker may register wwwxfoo.com, and get full cors access. This means it's easy – with `allowed-origins-regex` set to `true` – to accidentally make an insecure configuration, and is why the default is `false`.
-
-
+WARNING: Use the `allowed-origins-regex` configuration judiciously. You may accidentally make an insecure configuration which could be targeted by an attacker registering domains targeting the regular expression.
