--- a/src/main/docs/guide/httpServer/websocket.adoc
+++ b/src/main/docs/guide/httpServer/websocket.adoc
@@ -1,1 +1,5 @@
 Micronaut features dedicated support for creating WebSocket clients and servers. The pkg:websocket.annotation[] package includes annotations for defining both clients and servers.
+
+NOTE: Since Micronaut Framework 4.0. `io.micronaut:micronaut-http-server` no longer exposes `micronaut-websocket` transitively. If you are using annotations such as ann:websocket.annotation.ServerWebSocket[], you should add the `micronaut-websocket` dependency to your application classpath:
+
+dependency::micronaut-websocket[]
