--- a/src/main/docs/guide/languageSupport/kotlin/kaptOrKsp.adoc
+++ b/src/main/docs/guide/languageSupport/kotlin/kaptOrKsp.adoc
@@ -2,9 +2,17 @@ Micronaut Framework has offered support for Kotlin via https://kotlinlang.org/do
 
 With version 4.0, Micronaut Framework supports Kotlin also via https://kotlinlang.org/docs/ksp-overview.html[Kotlin Symbol Processing (KSP) API].
 
-
 Please note that KAPT is in maintenance mode. Micronaut framework 4 includes experimental support for KSP which Kotlin users should consider migrating in the future.
 
 ____
 kapt is in maintenance mode. We are keeping it up-to-date with recent Kotlin and Java releases but have no plans to implement new features.
 ____
+
+KAPT supports existing Java annotation processors by generating Java stubs and feeding them into the Java annotation processors.
+
+By skipping the generation of stubs, KSP offers several advantages:
+
+* Faster compilation.
+* Better support Kotlin native syntax.
+
+WARNING: If you use other annotation processors besides the Micronaut annotation processors, they will not work with KSP.
