doc: Add KSP section and mention it in what's new (#8786)

--- a/src/main/docs/guide/introduction/whatsNew.adoc
+++ b/src/main/docs/guide/introduction/whatsNew.adoc
@@ -5,6 +5,10 @@
 
 Micronaut Framework 4.0 supports https://kotlinlang.org/docs/whatsnew18.html[Kotlin 1.8.0]
 
+=== Experimental Support for Kotlin Symbol Processing (KSP)
+
+Micronaut Framework has offered support for Kotlin via <<kapt, KAPT>>. With version 4.0, Micronaut Framework supports Kotlin also via <<ksp, Kotlin Symbol Processing (KSP) API>>.
+
 === Apache Groovy 4.0
 
 Micronaut Framework 4.x supports https://groovy-lang.org/releasenotes/groovy-4.0.html[Apache Groovy 4.0].
