--- a/src/main/docs/guide/languageSupport/java/lombok.adoc
+++ b/src/main/docs/guide/languageSupport/java/lombok.adoc
@@ -40,9 +40,9 @@ Or if using Maven:
     <artifactId>micronaut-inject-java</artifactId>
     <version>${micronaut.version}</version>
   </path>
-    <path>
-    <groupId>io.micronaut</groupId>
-    <artifactId>micronaut-validation</artifactId>
+  <path>
+    <groupId>io.micronaut.validation</groupId>
+    <artifactId>micronaut-validation-processor</artifactId>
     <version>${micronaut.version}</version>
   </path>
 </annotationProcessorPaths>
