--- a/src/main/docs/guide/httpServer/datavalidation.adoc
+++ b/src/main/docs/guide/httpServer/datavalidation.adoc
@@ -2,9 +2,11 @@ It is easy to validate incoming data with Micronaut controllers using <<validati
 
 Micronaut provides native support for the `jakarta.validation` annotations with the `micronaut-validation` dependency:
 
-dependency::micronaut-validation[]
+dependency:micronaut-validation-processor[groupId="io.micronaut.validation",scope="annotationProcessor"]
 
-Or full JSR 380 compliance with the `micronaut-hibernate-validator` dependency:
+dependency:micronaut-validation[groupId="io.micronaut.validation"]
+
+Or full https://beanvalidation.org/2.0/spec/[JSR 380] compliance with the `micronaut-hibernate-validator` dependency:
 
 dependency:micronaut-hibernate-validator[groupId="io.micronaut.beanvalidation"]
 
