Apply suggestions from code review
Co-authored-by: Sergio del Amo <sergio.delamo@softamo.com>

--- a/src/main/docs/guide/config/evaluatedExpressions.adoc
+++ b/src/main/docs/guide/config/evaluatedExpressions.adoc
@@ -1,4 +1,4 @@
-Since 4.0 Micronaut supports embedding evaluated expressions in annotation values using `#{...}` syntax which
+Since 4.0, Micronaut framework supports embedding evaluated expressions in annotation values using `#{...}` syntax which
 allows to achieve even more flexibility while configuring your application.
 
 .Evaluated Expression example
