--- a/src/main/docs/guide/introduction/whatsNew.adoc
+++ b/src/main/docs/guide/introduction/whatsNew.adoc
@@ -7,15 +7,41 @@ Micronaut Framework 4.x supports https://groovy-lang.org/releasenotes/groovy-4.0
 
 === Core Changes
 
+==== Java 17 Baseline
 
-* <<virtualThreads, Support for Virtual Threads>>
-* <<filtermethods, Filter Methods>>
+Micronaut 4 now requires a minimum of Java 17 for building and running applications.
 
-* <<javanetClient, Additional implementation of the HTTP Client based on Java HTTP Client>>
+==== Improved Modularity
+
+The core of Micronaut has been further refactored to improve modularity and reduce the footprint of a Micronaut application, including:
+
+* Third-party dependencies on SnakeYAML and Jackson Databind are now optional and can be removed if other implementations are present.
+* The runtime and compiler code has been split, allowing the removal of the re-packaging of ASM and Caffeine and reduction of the runtime footprint.
+* The built in <<validation, Validation>>, <<retry, Retry>>, <<serviceDiscovery, Service Discovery>>, <<sessions, HTTP Session>> and <<websocket, WebSocket>> features have been split into separate modules allowing removal of this functionality if not needed.
+
+==== GraalVM Metadata Repository and Runtime Initialization
+
+The https://graalvm.github.io/native-build-tools/latest/gradle-plugin.html#metadata-support[GraalVM Metadata Repository] in Micronaut's Gradle and Maven plugins is now enabled by default and Micronaut has been altered to by default primarily initialize at runtime to ensure consistency in behaviour between JIT and Native applications.
+
+==== Completed `javax` to `jakarta` Migration
+
+The remaining functionality depending on the `javax` specification has been migrated to `jakarta` including the validation module (for `jakarta.validation`) and support for Hibernate 6 (for `jakarta.persistence`).
+
+==== Expression Language
+
+A new fully compilation time, type-safe and reflection-free <<evaluatedExpressions, Expression Language>> has been added to the framework which unlocks a number of new possibilities (like conditional job scheduling). It is expected that sub-modules will adopt the new EL over time to add features and capabilities.
 
 ==== Injection of Maps
 
 It is now possible to inject a `java.util.Map` of beans where the key is the bean name. The name of the bean is derived from the <<qualifiers, qualifier>> or (if not present) the simple name of the class.
+
+==== Arbitrary Nesting of Configuration Properties
+
+With Micronaut 4 it is now possible to arbitrarily nest ann:context.annotation.ConfigurationProperties[] and ann:context.annotation.EachProperty[] annotations allowing for more dynamic configuration possibilities.
+
+==== Improved Error Messages for Missing Configuration
+
+When a bean is not present due to missing configuration (such as a bean that uses ann:context.annotation.EachProperty[]) error messages have been improved to display the configuration that is required to activate the bean.
 
 ==== Improved Error Messages for Missing Beans
 
@@ -27,9 +53,27 @@ Beans that are disabled via <<conditionalBeans, Bean Requirements>> are now trac
 
 The disabled beans are also now visible via the <<beansEndpoint, Beans Endpoint>> in the <<management, Management module>> aiding in understanding the state of your application configuration.
 
+=== HTTP Changes
+
+==== Initial Support for Virtual Threads (Loom)
+
+Preview <<virtualThreads, support for Virtual Threads>> has been added. When using JDK 19 or above with preview features enabled you can off load processing to a virtual thread pool.
+
+==== Rewritten HTTP layer
+
+The HTTP layer has been rewritten to improve performance and reduce the presence of reactive stack frames if reactive is not used (such as with Virtual threads).
+
+==== Annotation-Based HTTP Filters
+
+See <<filtermethods, Filter Methods>>
+
+==== JDK HTTP Client
+
+<<javanetClient, Additional implementation of the HTTP Client based on Java HTTP Client>>
+
 === Other Dependency Upgrades
 
-- Kotlin 1.7.10
+- Kotlin 1.8.10
 
 <<breaks, Breaking changes in Micronaut Framework 4.0>>
 
