--- a/src/main/docs/guide/config/evaluatedExpressions.adoc
+++ b/src/main/docs/guide/config/evaluatedExpressions.adoc
@@ -50,6 +50,8 @@ snippet::io.micronaut.docs.expressions.ExampleJob[title="Job Control with Expres
 <1> Here the `condition` member of the ann:scheduling.annotation.Scheduled[] annotation is used to only execute the job if a pre-condition is met.
 <2> The `condition` invokes a method of a parameter which is another bean called `ExampleJobControl` which can be used to pause and resume execution of the job as desired.
 
+TIP: You can also use expressions to perform conditional routing using the `condition` member of HTTP annotations like ann:http.annotation.Get[].
+
 == Evaluated Expression Language Reference
 
 The Evaluated Expressions syntax supports the following functionality:
